# mlir_rvsdg

./: CMakeLists.txt
include/: CMakeLists.txt
include/JLM/: JLMDialect.h  JLMOps.h  JLMOps.td  JLMTypes.h
include/RVSDG/: CMakeLists.txt  RVSDGASMDirectives.h  RVSDGAttrs.h  RVSDGDialect.h  RVSDGInterfaces.h  RVSDGOpInterfaces.h  RVSDGOps.h  RVSDGOps.td  RVSDGPasses.h  RVSDGPasses.td  RVSDGPatterns.h  RVSDGPatterns.td  RVSDGTypes.td
include/polygeist/: CMakeLists.txt  PolygeistOps.td
lib/JLM/: JLMDialect.cpp  JLMOps.cpp  JLMTypes.cpp
lib/RVSDG/: CMakeLists.txt  RVSDGAttrs.cpp  RVSDGDialect.cpp  RVSDGImportPolygeistPass.cpp  RVSDGOpInterfaces.cpp  RVSDGOps.cpp  RVSDGPrintExportPass.cpp  RVSDGTypes.cpp
lib/polygeist/: .Ops.cpp.swp  CMakeLists.txt  Ops.cpp
rvsdg-opt/: CMakeLists.txt  rvsdg-opt.cpp
